--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
 #+TITLE: A collection of wallpapers
 #+AUTHOR:TobyM7
-Most wallpapers taken from wallpapercave --- [[[[https://wallpapercave.com/]]]]
+[[[[https://wallpapercave.com/]]][Most wallpapers taken from wallpapercave]]
 Some taken from themes eg dracula theme wallpaper
